@@ -5,6 +5,7 @@
 - KO Added the ability to view / edit point coordinates
 - KO Implemented Jump to Coordinates
 - KO Fixed #479 (should be able to save a verdat with no boundaries)
+- KO Fixed #475 (Should be able to create a new verdat from scratch)
 
 7/25/2013
 ---------------------------
